add layout e funcionalidades da paginação

--- a/public/js/directives/templates/pk-card.html
+++ b/public/js/directives/templates/pk-card.html
@@ -1,4 +1,4 @@
-<div class="card indigo darken-1 white-text">
+<div class="card indigo darken-1 white-text hoverable">
     <div class="card-image blue darken-2">
         <img src="{{img}}" width="300px" height="300px">
     </div>
@@ -6,6 +6,6 @@
         <span class="card-title">{{title}}</span>
     </div>
     <div class="card-action blue darken-4">
-        <a href="">{{msg('common.label.details')}}</a>
+        <a href="">{{buttonLabel}}</a>
     </div>
 </div>
