--- a/public/views/home.html
+++ b/public/views/home.html
@@ -12,9 +12,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col s4" ng-repeat="pokemon in pokemons | filter: {name: pokemonSearchTextFilter}">
-            <pk-card title="{{pokemon.name}}" img="{{pokemon.imageUrl}}"></pk-card>
+        <div class="col s3" ng-repeat="pokemon in pokemons | filter: {name: pokemonSearchTextFilter}">
+            <pk-card title="{{pokemon.name}}" button-label="{{msg('common.label.details')}}" img="{{pokemon.imageUrl}}"></pk-card>
         </div>
-        
+        <div class="col s12 center">
+            <pk-pagination numbers-per-pagination="12" max-page-number="93">
+            </pk-pagination>
+        </div>
     </div>
 </div>
