--- a/public/views/home.html
+++ b/public/views/home.html
@@ -5,14 +5,21 @@
             <div class="row">
                 <div class="input-field col s8 offset-s2">
                     <i class="material-icons prefix">search</i>
-                    <input id="icon_prefix" type="text" class="validate" ng-model="pokemonSearchTextFilter">
+                    <input name="searchInput" id="icon_prefix" type="text" 
+                            ng-class="msgErro ? 'invalid' : 'validate'" 
+                            ng-model="pokemonSearchTextFilter" 
+                            ng-keyup="validateSearchInput(pokemonSearchTextFilter)">
                     <label for="icon_prefix">{{msg('home.label.search')}}</label>
+                    <span class="helper-text" ng-if="msgErro">{{msgErro}}</span>
+                </div>
+                <div ng-hide="filteredPokemons.length">
+                    <pk-not-found></pk-not-found>
                 </div>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col s3" ng-repeat="pokemon in pokemons | filter: {name: pokemonSearchTextFilter}">
+        <div class="col s3" ng-repeat="pokemon in filteredPokemons = (pokemons | filter: {name: pokemonSearchTextFilter})">
             <pk-card title="{{pokemon.name}}" img="{{pokemon.imageUrl}}"></pk-card>
         </div>
         <div class="col s12 center">
