Adicionando condição para o aparecimento da diretiva pk-not-found na home

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -12,7 +12,7 @@
                     <label for="icon_prefix">{{msg('home.label.search')}}</label>
                     <span class="helper-text" ng-if="msgErro">{{msgErro}}</span>
                 </div>
-                <div ng-hide="filteredPokemons.length">
+                <div ng-hide="filteredPokemons.length || !pokemonSearchTextFilter">
                     <pk-not-found></pk-not-found>
                 </div>
             </div>
